--- a/html/party/activity-manager-input.html
+++ b/html/party/activity-manager-input.html
@@ -82,93 +82,90 @@
             <!--三重一大登记表&nbsp;&nbsp;<span id="title"></span>-->
         <!--</header>-->
         <fieldset>
+
             <div class="am-g sl-border-bottom-1px-solid-E6E6E6 sl-padding-08rem-0rem">
                 <div class="am-u-sm-4 am-u-md-4 am-u-lg-4 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
-                    <!--<i class="fa fa-asterisk text-icon-color sl-margin-right-02rem " ></i>-->
-                    登记名称
-                </div>
-                <div class="am-u-sm-8 am-u-md-8 am-u-lg-8 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
-                    <input type="text" name=""  placeholder="请输入登记事宜名称" value="" >
-                </div>
-            </div>
-            <div class="am-g sl-border-bottom-1px-solid-E6E6E6 sl-padding-08rem-0rem">
-                <div class="am-u-sm-4 am-u-md-4 am-u-lg-4 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
-                    <!--<i class="fa fa-asterisk text-icon-color sl-margin-right-02rem" ></i>-->
-                    会议类型
+                    <i class="fa fa-asterisk text-icon-color sl-margin-right-02rem" ></i>
+                    活动类型
                 </div>
                 <div class="am-u-sm-8 am-u-md-8 am-u-lg-8 sl-flex-row-center-space-between sl-padding-0rem-05rem">
-                    <input type="text" name=""  placeholder="请选择会议类型" value="" readonly>
+                    <input type="text" name=""  placeholder="请选择活动类型" value="" class="dict-data" readonly>
                     <i class="fa fa-angle-right sl-icon-color-CACACA"></i>
                 </div>
             </div>
             <div class="am-g sl-border-bottom-1px-solid-E6E6E6 sl-padding-08rem-0rem">
                 <div class="am-u-sm-4 am-u-md-4 am-u-lg-4 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
-                    <!--<i class="fa fa-asterisk text-icon-color sl-margin-right-02rem" ></i>-->
-                    是否中心审核
-                </div>
-                <div class="am-u-sm-8 am-u-md-8 am-u-lg-8 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
-                    <label class="sl-flex-row-center-center">
-                        <input type="radio" checked="checked" name="isCheck" value="1" >
-                        <span class="sl-margin-0px-5px">是</span>
-                    </label>
-                    <label class="sl-flex-row-center-center">
-                        <input type="radio"  name="isCheck" value="2" >
-                        <span class="sl-margin-0px-5px">否</span>
-                    </label>
-                </div>
-            </div>
-            <div class="am-g sl-border-bottom-1px-solid-E6E6E6 sl-padding-08rem-0rem">
-                <div class="am-u-sm-4 am-u-md-4 am-u-lg-4 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
-                    <!--<i class="fa fa-asterisk text-icon-color sl-margin-right-02rem " ></i>-->
-                    备案
-                </div>
-                <div class="am-u-sm-8 am-u-md-8 am-u-lg-8 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
-                    <input type="text" name=""  placeholder="请输入备案" value="" >
-                </div>
-            </div>
-            <div class="am-g sl-border-bottom-1px-solid-E6E6E6 sl-padding-08rem-0rem">
-                <div class="am-u-sm-4 am-u-md-4 am-u-lg-4 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
-                    <!--<i class="fa fa-asterisk text-icon-color sl-margin-right-02rem " ></i>-->
-                    结论
-                </div>
-                <div class="am-u-sm-8 am-u-md-8 am-u-lg-8 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
-                    <input type="text" name=""  placeholder="请输入结论" value="" >
-                </div>
-            </div>
-            <div class="am-g sl-border-bottom-1px-solid-E6E6E6 sl-padding-08rem-0rem">
-                <div class="am-u-sm-4 am-u-md-4 am-u-lg-4 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
-                    <!--<i class="fa fa-asterisk text-icon-color sl-margin-right-02rem" ></i>-->
-                    通知对象
+                    <i class="fa fa-asterisk text-icon-color sl-margin-right-02rem" ></i>
+                    是否使用党费
                 </div>
                 <div class="am-u-sm-8 am-u-md-8 am-u-lg-8 sl-flex-row-center-space-between sl-padding-0rem-05rem">
-                    <input type="text" name=""  placeholder="请选择通知对象" value="" readonly>
+                    <input type="text" name=""  placeholder="请选择是否使用党费" value="" class="dict-data" readonly>
+                    <i class="fa fa-angle-right sl-icon-color-CACACA"></i>
+                </div>
+                <!--<div class="am-u-sm-8 am-u-md-8 am-u-lg-8 sl-flex-row-center-flex-start sl-padding-0rem-05rem">-->
+                <!--<label class="sl-flex-row-center-center">-->
+                <!--<input type="radio" checked="checked" name="isCheck" value="1" >-->
+                <!--<span class="sl-margin-0px-5px">是</span>-->
+                <!--</label>-->
+                <!--<label class="sl-flex-row-center-center">-->
+                <!--<input type="radio"  name="isCheck" value="2" >-->
+                <!--<span class="sl-margin-0px-5px">否</span>-->
+                <!--</label>-->
+                <!--</div>-->
+            </div>
+            <div class="am-g sl-border-bottom-1px-solid-E6E6E6 sl-padding-08rem-0rem">
+                <div class="am-u-sm-4 am-u-md-4 am-u-lg-4 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
+                    <i class="fa fa-asterisk text-icon-color sl-margin-right-02rem" ></i>
+                    活动支部
+                </div>
+                <div class="am-u-sm-8 am-u-md-8 am-u-lg-8 sl-flex-row-center-space-between sl-padding-0rem-05rem">
+                    <input type="text" name=""  placeholder="请选择活动支部" value="" class="dict-data" readonly>
                     <i class="fa fa-angle-right sl-icon-color-CACACA"></i>
                 </div>
             </div>
             <div class="am-g sl-border-bottom-1px-solid-E6E6E6 sl-padding-08rem-0rem">
                 <div class="am-u-sm-4 am-u-md-4 am-u-lg-4 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
-                    <!--<i class="fa fa-asterisk text-icon-color sl-margin-right-02rem" ></i>-->
+                    <i class="fa fa-asterisk text-icon-color sl-margin-right-02rem " ></i>
+                    活动费用
+                </div>
+                <div class="am-u-sm-8 am-u-md-8 am-u-lg-8 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
+                    <input type="text" name=""  placeholder="请输入活动费用" value="" >
+                </div>
+            </div>
+            <div class="am-g sl-border-bottom-1px-solid-E6E6E6 sl-padding-08rem-0rem">
+                <div class="am-u-sm-4 am-u-md-4 am-u-lg-4 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
+                    <i class="fa fa-asterisk text-icon-color sl-margin-right-02rem " ></i>
+                    可支配金额
+                </div>
+                <div class="am-u-sm-8 am-u-md-8 am-u-lg-8 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
+                    <input type="text" name=""  placeholder="自动计算" value="" readonly>
+                </div>
+            </div>
+
+            <div class="am-g sl-border-bottom-1px-solid-E6E6E6 sl-padding-08rem-0rem">
+                <div class="am-u-sm-4 am-u-md-4 am-u-lg-4 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
+                    <i class="fa fa-asterisk text-icon-color sl-margin-right-02rem" ></i>
                     相应会议记录
                 </div>
                 <div class="am-u-sm-8 am-u-md-8 am-u-lg-8 sl-flex-row-center-space-between sl-padding-0rem-05rem">
-                    <div class="meeting-record">请选择相应会议记录</div>
+                    <div class="meeting-record dict-data">请选择相应会议记录</div>
                     <i class="fa fa-angle-right sl-icon-color-CACACA"></i>
                 </div>
             </div>
-            <div class="am-g sl-margin-top-10px sl-flex-row-center-center">
-                <div class="am-u-sm-6 am-u-md-6 am-u-lg-6">
-                    <div class=" am-form-file">
-                        <button type="button" class="am-btn am-btn-danger am-btn-sm">
-                            <i class="am-icon-cloud-upload"></i> 上传图片</button>
-                        <input id="doc-form-file" type="file" multiple onchange="html5Upload()">
-                    </div>
-                </div>
-                <div class="am-u-sm-6 am-u-md-6 am-u-lg-6 sl-flex-row-center-center sl-padding-0px">
-                    <span class="" id="hintImage" style="display: none">点击文件删除文件、<br/>最多上传3个文件</span>
-                </div>
-            </div>
-            <ul class="am-avg-sm-4 am-avg-md-4 am-avg-lg-4" id="result">
-            </ul>
+            <!--<div class="am-g sl-margin-top-10px sl-flex-row-center-center">-->
+                <!--<div class="am-u-sm-6 am-u-md-6 am-u-lg-6">-->
+                    <!--<div class=" am-form-file">-->
+                        <!--<button type="button" class="am-btn am-btn-danger am-btn-sm">-->
+                            <!--<i class="am-icon-cloud-upload"></i> 上传图片</button>-->
+                        <!--<input id="doc-form-file" type="file" multiple onchange="html5Upload()">-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="am-u-sm-6 am-u-md-6 am-u-lg-6 sl-flex-row-center-center sl-padding-0px">-->
+                    <!--<span class="" id="hintImage" style="display: none">点击文件删除文件、<br/>最多上传3个文件</span>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<ul class="am-avg-sm-4 am-avg-md-4 am-avg-lg-4" id="result">-->
+            <!--</ul>-->
         </fieldset>
     </form>
 
@@ -183,50 +180,50 @@
 //        rem.titleCenter();
 //    });
     //从本地数据读取数据
-    $(document).ready(function () {
-        var result = sessionStorage.getItem('result');
-        var code =sessionStorage.getItem('dictCode');
-        if(code !== null && result !== null){
-            if(code === '112'){
-//               var str1='<div name="meetingDiv"><a  key="btn-choose-meetingName" onclick="meetingDetail(\''+$.trim(meetingUseIdArr[i])+'\')">'+s+',';
-//               var str2 ='</a><input type="hidden" id="meetingId" name="meetingId" value="'+$.trim(meetingUseIdArr[i])+'"/></div>' ;
-                $("div.meeting-record").html(result)
-                sessionStorage.removeItem('result');
-                sessionStorage.removeItem('val');
-                sessionStorage.removeItem('type')
-            }else{
-                var lastNum = code.charAt(2);
-                $('input:read-only').eq(lastNum).val(result);
-                sessionStorage.removeItem('result');
-                sessionStorage.removeItem('val');
-                sessionStorage.removeItem('type')
-            }
-
-        }
-
-    });
-    //点击div,跳转页面
-    $("div.am-g").click(function () {
-        var eleInput = $(this).find('input:read-only')[0];
-        $('input:read-only').each(function (i,v) {
-            if(eleInput == v){
-                sessionStorage.setItem('dictCode','11'+i);//第一个1代表是党政模块的，第二个1代表的是三重一大，第三个1代表的是需要查询的第一个词典
-                sessionStorage.setItem('val',$(this).val());
-                if(i === 0){
-                    sessionStorage.setItem('type','radio');
-                }else{
-                    sessionStorage.setItem('type','checkbox');
-                }
-                location.href='../dict-search.html'
-            }
-        });
-        if( $(this).find('div').hasClass('meeting-record')){
-            sessionStorage.setItem('dictCode','112');
-            sessionStorage.setItem('val',$(this).find('div.meeting-record').html());
-            sessionStorage.setItem('type','checkbox');
-            location.href='../dict-search.html'
-        }
-    });
+//    $(document).ready(function () {
+//        var result = sessionStorage.getItem('result');
+//        var code =sessionStorage.getItem('dictCode');
+//        if(code !== null && result !== null){
+//            if(code === '112'){
+////               var str1='<div name="meetingDiv"><a  key="btn-choose-meetingName" onclick="meetingDetail(\''+$.trim(meetingUseIdArr[i])+'\')">'+s+',';
+////               var str2 ='</a><input type="hidden" id="meetingId" name="meetingId" value="'+$.trim(meetingUseIdArr[i])+'"/></div>' ;
+//                $("div.meeting-record").html(result)
+//                sessionStorage.removeItem('result');
+//                sessionStorage.removeItem('val');
+//                sessionStorage.removeItem('type')
+//            }else{
+//                var lastNum = code.charAt(2);
+//                $('input:read-only').eq(lastNum).val(result);
+//                sessionStorage.removeItem('result');
+//                sessionStorage.removeItem('val');
+//                sessionStorage.removeItem('type')
+//            }
+//
+//        }
+//
+//    });
+//    //点击div,跳转页面
+//    $("div.am-g").click(function () {
+//        var eleInput = $(this).find('input:read-only')[0];
+//        $('input:read-only').each(function (i,v) {
+//            if(eleInput == v){
+//                sessionStorage.setItem('dictCode','11'+i);//第一个1代表是党政模块的，第二个1代表的是三重一大，第三个1代表的是需要查询的第一个词典
+//                sessionStorage.setItem('val',$(this).val());
+//                if(i === 0){
+//                    sessionStorage.setItem('type','radio');
+//                }else{
+//                    sessionStorage.setItem('type','checkbox');
+//                }
+//                location.href='../dict-search.html'
+//            }
+//        });
+//        if( $(this).find('div').hasClass('meeting-record')){
+//            sessionStorage.setItem('dictCode','112');
+//            sessionStorage.setItem('val',$(this).find('div.meeting-record').html());
+//            sessionStorage.setItem('type','checkbox');
+//            location.href='../dict-search.html'
+//        }
+//    });
 </script>
 <script>
     function getIndex(i) {
