--- a/html/party/party.html
+++ b/html/party/party.html
@@ -262,9 +262,8 @@
 
             //跳转页面
             var moduleId = 0;
-            var menuId = index;
             var menuName = name;
-            rem.moduleSelect(moduleId,menuId,menuName);
+            rem.moduleSelect(moduleId,menuName);
 //            if(index === 0){
 //                href='strong-big';
 //                flag = true;
