--- a/html/party/strong-big-input.html
+++ b/html/party/strong-big-input.html
@@ -11,27 +11,7 @@
     <!--&lt;!&ndash; Set render engine for 360 browser &ndash;&gt;-->
     <!--<meta name="renderer" content="webkit">-->
 
-    <!--&lt;!&ndash; No Baidu Siteapp&ndash;&gt;-->
-    <!--<meta http-equiv="Cache-Control" content="no-siteapp"/>-->
 
-    <!--<link rel="icon" type="image/png" href="i/favicon.png">-->
-
-    <!--&lt;!&ndash; Add to homescreen for Chrome on Android &ndash;&gt;-->
-    <!--<meta name="mobile-web-app-capable" content="yes">-->
-    <!--<link rel="icon" sizes="192x192" href="i/app-icon72x72@2x.png">-->
-
-    <!--&lt;!&ndash; Add to homescreen for Safari on iOS &ndash;&gt;-->
-    <!--<meta name="apple-mobile-web-app-capable" content="yes">-->
-    <!--<meta name="apple-mobile-web-app-status-bar-style" content="black">-->
-    <!--<meta name="apple-mobile-web-app-title" content="Amaze UI"/>-->
-    <!--<link rel="apple-touch-icon-precomposed" href="i/app-icon72x72@2x.png">-->
-
-    <!--&lt;!&ndash; Tile icon for Win8 (144x144 + tile color) &ndash;&gt;-->
-    <!--<meta name="msapplication-TileImage" content="i/app-icon72x72@2x.png">-->
-    <!--<meta name="msapplication-TileColor" content="#0e90d2">-->
-
-    <!-- Amaze UI CSS -->
-    <!--<link rel="stylesheet" href="http://cdn.amazeui.org/amazeui/2.7.2/css/amazeui.min.css">-->
     <link rel="stylesheet" href="../../assets/css/amazeui.css">
     <link rel="stylesheet" href="../../assets/css/font-awesome.css">
     <link rel="stylesheet" href="../../assets/css/LCommon.css">
@@ -60,7 +40,7 @@
         <fieldset>
             <div class="am-g sl-border-bottom-1px-solid-E6E6E6 sl-padding-08rem-0rem">
                 <div class="am-u-sm-4 am-u-md-4 am-u-lg-4 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
-                    <!--<i class="fa fa-asterisk text-icon-color sl-margin-right-02rem " ></i>-->
+                    <i class="fa fa-asterisk text-icon-color sl-margin-right-02rem " ></i>
                     登记名称
                 </div>
                 <div class="am-u-sm-8 am-u-md-8 am-u-lg-8 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
@@ -69,33 +49,37 @@
             </div>
             <div class="am-g sl-border-bottom-1px-solid-E6E6E6 sl-padding-08rem-0rem">
                 <div class="am-u-sm-4 am-u-md-4 am-u-lg-4 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
-                    <!--<i class="fa fa-asterisk text-icon-color sl-margin-right-02rem" ></i>-->
+                    <i class="fa fa-asterisk text-icon-color sl-margin-right-02rem" ></i>
                     会议类型
                 </div>
                 <div class="am-u-sm-8 am-u-md-8 am-u-lg-8 sl-flex-row-center-space-between sl-padding-0rem-05rem">
-                    <input type="text" name=""  placeholder="请选择会议类型" value="" readonly>
+                    <input type="text" name=""  placeholder="请选择会议类型" value="" class="dict-data" readonly>
                     <i class="fa fa-angle-right sl-icon-color-CACACA"></i>
                 </div>
             </div>
             <div class="am-g sl-border-bottom-1px-solid-E6E6E6 sl-padding-08rem-0rem">
                 <div class="am-u-sm-4 am-u-md-4 am-u-lg-4 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
-                    <!--<i class="fa fa-asterisk text-icon-color sl-margin-right-02rem" ></i>-->
+                    <i class="fa fa-asterisk text-icon-color sl-margin-right-02rem" ></i>
                     是否中心审核
                 </div>
-                <div class="am-u-sm-8 am-u-md-8 am-u-lg-8 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
-                    <label class="sl-flex-row-center-center">
-                        <input type="radio" checked="checked" name="isCheck" value="1" >
-                        <span class="sl-margin-0px-5px">是</span>
-                    </label>
-                    <label class="sl-flex-row-center-center">
-                        <input type="radio"  name="isCheck" value="2" >
-                        <span class="sl-margin-0px-5px">否</span>
-                    </label>
+                <div class="am-u-sm-8 am-u-md-8 am-u-lg-8 sl-flex-row-center-space-between sl-padding-0rem-05rem">
+                    <input type="text" name=""  placeholder="请选择是否中心审核" value="" class="dict-data" readonly>
+                    <i class="fa fa-angle-right sl-icon-color-CACACA"></i>
                 </div>
+                <!--<div class="am-u-sm-8 am-u-md-8 am-u-lg-8 sl-flex-row-center-flex-start sl-padding-0rem-05rem">-->
+                    <!--<label class="sl-flex-row-center-center">-->
+                        <!--<input type="radio" checked="checked" name="isCheck" value="1" >-->
+                        <!--<span class="sl-margin-0px-5px">是</span>-->
+                    <!--</label>-->
+                    <!--<label class="sl-flex-row-center-center">-->
+                        <!--<input type="radio"  name="isCheck" value="2" >-->
+                        <!--<span class="sl-margin-0px-5px">否</span>-->
+                    <!--</label>-->
+                <!--</div>-->
             </div>
             <div class="am-g sl-border-bottom-1px-solid-E6E6E6 sl-padding-08rem-0rem">
                 <div class="am-u-sm-4 am-u-md-4 am-u-lg-4 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
-                    <!--<i class="fa fa-asterisk text-icon-color sl-margin-right-02rem " ></i>-->
+                    <i class="fa fa-asterisk text-icon-color sl-margin-right-02rem " ></i>
                     备案
                 </div>
                 <div class="am-u-sm-8 am-u-md-8 am-u-lg-8 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
@@ -104,7 +88,7 @@
             </div>
             <div class="am-g sl-border-bottom-1px-solid-E6E6E6 sl-padding-08rem-0rem">
                 <div class="am-u-sm-4 am-u-md-4 am-u-lg-4 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
-                    <!--<i class="fa fa-asterisk text-icon-color sl-margin-right-02rem " ></i>-->
+                    <i class="fa fa-asterisk text-icon-color sl-margin-right-02rem " ></i>
                     结论
                 </div>
                 <div class="am-u-sm-8 am-u-md-8 am-u-lg-8 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
@@ -113,21 +97,21 @@
             </div>
             <div class="am-g sl-border-bottom-1px-solid-E6E6E6 sl-padding-08rem-0rem">
                 <div class="am-u-sm-4 am-u-md-4 am-u-lg-4 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
-                    <!--<i class="fa fa-asterisk text-icon-color sl-margin-right-02rem" ></i>-->
+                    <i class="fa fa-asterisk text-icon-color sl-margin-right-02rem" ></i>
                     通知对象
                 </div>
                 <div class="am-u-sm-8 am-u-md-8 am-u-lg-8 sl-flex-row-center-space-between sl-padding-0rem-05rem">
-                    <input type="text" name=""  placeholder="请选择通知对象" value="" readonly>
+                    <input type="text" name=""  placeholder="请选择通知对象" value="" class="dict-data" readonly>
                     <i class="fa fa-angle-right sl-icon-color-CACACA"></i>
                 </div>
             </div>
             <div class="am-g sl-border-bottom-1px-solid-E6E6E6 sl-padding-08rem-0rem">
                 <div class="am-u-sm-4 am-u-md-4 am-u-lg-4 sl-flex-row-center-flex-start sl-padding-0rem-05rem">
-                    <!--<i class="fa fa-asterisk text-icon-color sl-margin-right-02rem" ></i>-->
+                    <i class="fa fa-asterisk text-icon-color sl-margin-right-02rem" ></i>
                     相应会议记录
                 </div>
                 <div class="am-u-sm-8 am-u-md-8 am-u-lg-8 sl-flex-row-center-space-between sl-padding-0rem-05rem">
-                    <div class="meeting-record">请选择相应会议记录</div>
+                    <div class="meeting-record dict-data" >请选择相应会议记录</div>
                     <i class="fa fa-angle-right sl-icon-color-CACACA"></i>
                 </div>
             </div>
@@ -151,51 +135,7 @@
 </div>
 <script>
 
-    //从本地数据读取数据
-    $(document).ready(function () {
-       var result = sessionStorage.getItem('result');
-       var code =sessionStorage.getItem('dictCode');
-       if(code !== null && result !== null){
-           if(code === '112'){
-//               var str1='<div name="meetingDiv"><a  key="btn-choose-meetingName" onclick="meetingDetail(\''+$.trim(meetingUseIdArr[i])+'\')">'+s+',';
-//               var str2 ='</a><input type="hidden" id="meetingId" name="meetingId" value="'+$.trim(meetingUseIdArr[i])+'"/></div>' ;
-               $("div.meeting-record").html(result);
-               sessionStorage.removeItem('result');
-               sessionStorage.removeItem('val');
-               sessionStorage.removeItem('type')
-           }else{
-               var lastNum = code.charAt(2);
-               $('input:read-only').eq(lastNum).val(result);
-               sessionStorage.removeItem('result');
-               sessionStorage.removeItem('val');
-               sessionStorage.removeItem('type')
-           }
 
-       }
-
-    });
-    //点击div,跳转页面
-    $("div.am-g").click(function () {
-        var eleInput = $(this).find('input:read-only')[0];
-        $('input:read-only').each(function (i,v) {
-            if(eleInput == v){
-                sessionStorage.setItem('dictCode','11'+i);//第一个1代表是党政模块的，第二个1代表的是三重一大，第三个1代表的是需要查询的第一个词典
-                sessionStorage.setItem('val',$(this).val());
-                if(i === 0){
-                    sessionStorage.setItem('type','radio');
-                }else{
-                    sessionStorage.setItem('type','checkbox');
-                }
-                location.href='../dict-search.html'
-            }
-        });
-        if( $(this).find('div').hasClass('meeting-record')){
-            sessionStorage.setItem('dictCode','112');
-            sessionStorage.setItem('val',$(this).find('div.meeting-record').html());
-            sessionStorage.setItem('type','checkbox');
-            location.href='../dict-search.html'
-        }
-    })
     //将文件以DataURL形式读入页面
     function html5Upload() {
         var file;
@@ -261,11 +201,12 @@
 
 </body>
 
-<script>
-    function getModuleId(i) {
-        sessionStorage.setItem('moduleId',i);
-    }
-</script>
+<!--<script>-->
+    <!--function getIndex(i) {-->
+        <!--var rem = new Rem();-->
+        <!--rem.setBottonNavIndex(i);-->
+    <!--}-->
+<!--</script>-->
 </html>
 
 
